<resources>
    <string name="app_name">Friend Finder</string>
    <string name="action_settings">Settings</string>
    <string name="home_title">Welcome,</string>
    <string name="button_edit_account_settings">Edit Account Settings</string>
    <string name="button_edit_profile">Edit Profile</string>
    <string name="button_search_for_friends">Search For Friends</string>
    <string name="save_state_test_box">Save State Test Box</string>
    <string name="title_activity_login_screen">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This email or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="placeholder_for_search_menu">Placeholder for Search Menu</string>
    <string name="search_button">Search</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="create_account_button">Create Account</string>
    <string name="about_me">About Me</string>
    <string name="aboutmeview">AboutMeView</string>
    <string name="hobbies">Hobbies</string>
    <string name="usernameProfileScreen">UserName</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="friend_star">Friend Star</string>
    <string name="stay_logged_in_for_1_day">Stay Logged In For 1 Day</string>
    <string name="create_new_event">Create New Event</string>
    <string name="create_event">Create Event</string>
    <string name="event_location">Event Location</string>
    <string name="event_name">Event Name</string>
    <string name="save_event">Save Event</string>
    <string name="event_date">Event Date</string>
    <string name="search_for_events">Search For Events</string>
</resources>
