<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.imminentapps.friendfinder.activities.HomeScreen"
    tools:showIn="@layout/activity_home_screen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06999999" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/buttonSearchForFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_search_for_friends" />

        <Button
            android:id="@+id/buttonEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_edit_profile" />

        <Button
            android:id="@+id/buttonEditAccountSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_edit_account_settings" />

        <Button
            android:id="@+id/buttonCreateEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_event" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
